# ikm2

./: CMakeLists.txt  Doxyfile  main.cpp
src/models/: DatabaseManager.cpp  DatabaseManager.h  Student.cpp  Student.h  Subject.cpp  Subject.h  Teacher.cpp  Teacher.h
src/viewmodels/: UniversityViewModel.cpp  UniversityViewModel.h
